--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -77,8 +77,8 @@
                 android:layout_marginBottom="32dp"
                 android:layout_marginEnd="32dp"
                 android:onClick="@{viewModel.openAddItemMenu}"
-                android:visibility="@{viewModel.addItemMenuButtonVisibility}"
                 android:src="@drawable/ic_add_white_24dp"
+                app:setFabAnimation="@{viewModel.fabAnimationStart}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:maxImageSize="40dp" />
@@ -87,8 +87,8 @@
                 android:id="@+id/addItemContainer"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                app:setContainerAnimation="@{viewModel.menuAddAnimationStart}"
                 android:background="@color/mainCoolColor"
-                android:visibility="@{viewModel.addItemMenuVisibility}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/listRecycler">
