--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -35,7 +35,7 @@
                 app:layout_constraintStart_toEndOf="@+id/listItemCheckBox"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.517"
-                tools:text="itemName" />
+                android:text="@{viewModel.itemName}" />
 
             <androidx.appcompat.widget.AppCompatCheckBox
                 android:id="@+id/listItemCheckBox"
