--- a/app/src/main/res/layout/fragment_namelist.xml
+++ b/app/src/main/res/layout/fragment_namelist.xml
@@ -47,7 +47,7 @@
                 android:background="@drawable/namelist_button"
                 android:textColor="@color/white"
                 android:onClick="@{viewModel.onBackPressed}"
-                android:text="Back"
+                android:text="@string/back"
                 app:layout_constraintEnd_toStartOf="@+id/buttonCreateList"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="@+id/nameListEditText"
@@ -59,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:buttonViewBackground="@{viewModel.createListButtonBackground}"
-                android:text="Create list"
+                android:text="@string/create_list"
                 android:onClick="@{viewModel.openListFragment}"
                 android:textColor="@{viewModel.createListButtonTextColor}"
                 app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
