--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -30,6 +30,17 @@
                 android:elevation="4dp">
 
                 <TextView
+                    android:id="@+id/deleteMessage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="4dp"
+                    android:textColor="@color/white"
+                    android:text="@string/swipe_left_to_delete"
+                    android:visibility="@{viewModel.infoMessageVisibility}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+                <TextView
                     android:id="@+id/listName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -59,17 +70,41 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/listFragmentToolbarContainer" />
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/listRecycler"
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginBottom="56dp"
-                app:adapter="@{viewModel.listItemRecyclerViewModel.adapter}"
-                app:layout_constraintBottom_toBottomOf="@+id/addItemContainer"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toTopOf="@+id/addItemContainer"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/listFragmentToolbarContainer" />
+                app:layout_constraintTop_toBottomOf="@id/listFragmentToolbarContainer">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/listRecycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:adapter="@{viewModel.listItemRecyclerViewModel.adapter}"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <View
+                        android:id="@+id/view"
+                        android:layout_width="match_parent"
+                        android:layout_height="56dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/listRecycler" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.core.widget.NestedScrollView>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/addItemContainer"
@@ -96,6 +131,8 @@
                     android:paddingEnd="10dp"
                     android:paddingBottom="4dp"
                     android:textSize="16sp"
+                    android:maxLines="1"
+                    android:inputType="text"
                     android:text="@={viewModel.newItemName}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/listAddItemButton"
@@ -130,7 +167,7 @@
                     android:paddingTop="4dp"
                     android:paddingEnd="8dp"
                     android:paddingBottom="4dp"
-                    android:text="Close"
+                    android:text="@string/close"
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
