--- a/app/src/main/res/layout/fragment_main_lists.xml
+++ b/app/src/main/res/layout/fragment_main_lists.xml
@@ -33,8 +33,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/app_name2"
-                    android:textSize="20sp"
                     android:textColor="@color/white"
+                    android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -43,32 +43,50 @@
                 <TextView
                     android:id="@+id/deleteMessage"
                     android:layout_width="0dp"
-                    android:gravity="end"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:paddingEnd="4dp"
+                    android:padding="4dp"
+                    android:gravity="end"
                     android:text="@string/swipe_left_to_delete"
                     android:textColor="@color/white"
+                    android:textSize="10sp"
                     android:visibility="@{viewModel.infoMessageVisibility}"
                     app:layout_constraintBottom_toTopOf="@+id/archiveMessage"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/archiveMessage"
                     app:layout_constraintStart_toEndOf="@+id/appTitle" />
 
                 <TextView
                     android:id="@+id/archiveMessage"
                     android:layout_width="0dp"
-                    android:gravity="end"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:paddingStart="4dp"
-                    android:paddingEnd="4dp"
-                    android:paddingBottom="4dp"
+                    android:padding="4dp"
                     android:text="@string/swipe_right_to_archive"
                     android:textColor="@color/white"
+                    android:textSize="10sp"
+                    android:gravity="end"
                     android:visibility="@{viewModel.infoMessageVisibility}"
-                    app:layout_constraintBottom_toBottomOf="@+id/toolbarContainer"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/appTitle" />
+
+                <TextView
+                    android:id="@+id/openArchiveButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/close_text_background"
+                    android:onClick="@{viewModel.openArchiveFragment}"
+                    android:paddingStart="8dp"
+                    android:paddingTop="4dp"
+                    android:paddingEnd="8dp"
+                    android:paddingBottom="4dp"
+                    android:text="@string/archive"
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/toolbarContainer"
+                    app:layout_constraintTop_toTopOf="@+id/appTitle" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -110,25 +128,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:maxImageSize="40dp" />
-
-            <TextView
-                android:id="@+id/openArchiveButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/close_text_background"
-                android:onClick="@{viewModel.openArchiveFragment}"
-                android:paddingStart="8dp"
-                android:paddingTop="4dp"
-                android:paddingEnd="8dp"
-                android:paddingBottom="4dp"
-                android:text="@string/archive"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="@+id/toolbarContainer"
-                app:layout_constraintStart_toStartOf="@+id/toolbarContainer"
-                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
