--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -147,7 +147,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
-                    android:onClick="@{viewModel.addNewItem}"
+                    android:onClick="@{viewModel::addNewItem}"
                     android:src="@drawable/ic_add_white_24dp"
                     app:fabSize="mini"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -163,7 +163,7 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/close_text_background"
-                    android:onClick="@{viewModel.closeAddItemMenu}"
+                    android:onClick="@{viewModel::closeAddItemMenu}"
                     android:paddingStart="8dp"
                     android:paddingTop="4dp"
                     android:paddingEnd="8dp"
@@ -183,7 +183,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="32dp"
                 android:layout_marginEnd="32dp"
-                android:onClick="@{viewModel.openAddItemMenu}"
+                android:onClick="@{viewModel::openAddItemMenu}"
                 android:src="@drawable/ic_add_white_24dp"
                 app:setFabAnimation="@{viewModel.fabAnimationStart}"
                 app:layout_constraintBottom_toBottomOf="parent"
