--- a/app/src/main/res/layout/fragment_main_lists.xml
+++ b/app/src/main/res/layout/fragment_main_lists.xml
@@ -77,7 +77,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/close_text_background"
-                    android:onClick="@{viewModel.openArchiveFragment}"
+                    android:onClick="@{viewModel::openArchiveFragment}"
                     android:paddingStart="8dp"
                     android:paddingTop="4dp"
                     android:paddingEnd="8dp"
@@ -122,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="32dp"
-                android:onClick="@{viewModel.addNewList}"
+                android:onClick="@{viewModel::addNewList}"
                 android:src="@drawable/ic_add_white_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
