--- a/app/src/main/res/layout/fragment_namelist.xml
+++ b/app/src/main/res/layout/fragment_namelist.xml
@@ -46,7 +46,7 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/namelist_button"
                 android:textColor="@color/white"
-                android:onClick="@{viewModel.onBackPressed}"
+                android:onClick="@{viewModel::onBackPressed}"
                 android:text="@string/back"
                 app:layout_constraintEnd_toStartOf="@+id/buttonCreateList"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -60,8 +60,8 @@
                 android:layout_marginStart="16dp"
                 android:buttonViewBackground="@{viewModel.createListButtonBackground}"
                 android:text="@string/create_list"
-                android:onClick="@{viewModel.openListFragment}"
-                android:textColor="@{viewModel.createListButtonTextColor}"
+                android:onClick="@{viewModel::openListFragment}"
+                app:textViewTextColor="@{viewModel.createListButtonTextColor}"
                 app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
                 app:layout_constraintEnd_toEndOf="@+id/nameListEditText"
                 app:layout_constraintHorizontal_bias="0.5"
